Commit develop firebasse app

--- a/Android/FirebaseApp/app/build.gradle
+++ b/Android/FirebaseApp/app/build.gradle
@@ -33,7 +33,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
 
-    //TODO:  Add dependencias para Firebase, Google Facebook
     // Firebase Analytics
     implementation 'com.google.firebase:firebase-core:17.2.1'
 
@@ -41,14 +40,17 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.1.0'
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
 
+    // Google login
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+
     // Firebase Database
     implementation 'com.google.firebase:firebase-database:19.2.0'
 
+    // Firebase Storage
+    implementation 'com.google.firebase:firebase-storage:19.1.0'
+
     // Facebook SDK
     implementation 'com.facebook.android:facebook-android-sdk:5.9.0'
-
-    // Google login
-    implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
     // ViewModel and LiveData
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
@@ -73,4 +75,4 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
 
-//TODO: aplicar plugin play services
+apply plugin: 'com.google.gms.google-services'
