--- a/Android/TmdbAudioProject/app/src/main/AndroidManifest.xml
+++ b/Android/TmdbAudioProject/app/src/main/AndroidManifest.xml
@@ -11,8 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/tadb"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.MainActivity">
+        <activity android:name=".view.MainActivity"></activity>
+        <activity android:name=".view.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
