--- a/Android/FirebaseApp/app/src/main/AndroidManifest.xml
+++ b/Android/FirebaseApp/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:usesCleartextTraffic="true">
 
         <activity
-            android:name=".login.view.LoginActivity"
+            android:name=".jaum.login.view.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,8 +24,9 @@
         </activity>
 
         <activity
-            android:name=".home.view.HomeActivity"
+            android:name=".jaum.home.view.HomeActivity"
             android:label="@string/app_name" />
+
 
         <activity
             android:name="com.facebook.FacebookActivity"
@@ -34,8 +35,7 @@
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
+            <intent-filter><action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
@@ -44,9 +44,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".favorites.view.FavoritesActivity" />
+        <activity android:name=".jaum.favorites.view.FavoritesActivity" />
         <activity
-            android:name=".register.view.RegisterActivity"
+            android:name=".jaum.register.view.RegisterActivity"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
