--- a/Android/FirebaseApp/build.gradle
+++ b/Android/FirebaseApp/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.5.2'
 
         //TODO: Add Play Services
+        classpath 'com.google.gms:google-services:4.3.2'
 
 
         // NOTE: Do not place your application dependencies here; they belong
