--- a/Android/FirebaseApp/app/build.gradle
+++ b/Android/FirebaseApp/app/build.gradle
@@ -1,4 +1,9 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 28
@@ -28,10 +33,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.60"
 
     // Imagens
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.github.jkwiecien:EasyImage:3.0.3'
 
     // Firebase Analytics
     implementation 'com.google.firebase:firebase-core:17.2.1'
@@ -48,6 +55,16 @@ dependencies {
 
     // Firebase Storage
     implementation 'com.google.firebase:firebase-storage:19.1.0'
+
+    // Firebase message
+    implementation 'com.google.firebase:firebase-messaging:20.0.1'
+
+    // Firebase Analytics
+    implementation 'com.google.firebase:firebase-analytics:17.2.1'
+
+    // Crashlytics
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+
 
     // Facebook SDK
     implementation 'com.facebook.android:facebook-android-sdk:5.9.0'
