--- a/Android/FirebaseApp/app/src/main/AndroidManifest.xml
+++ b/Android/FirebaseApp/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="br.com.digitalhouse.firebaseapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -48,6 +50,27 @@
         <activity
             android:name=".register.view.RegisterActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".profile.view.ProfileActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@mipmap/ic_launcher" />
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/colorAccent" />
+
+        <service
+            android:name=".services.CustomFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
