--- a/Android/FirebaseApp/build.gradle
+++ b/Android/FirebaseApp/build.gradle
@@ -4,7 +4,11 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
+
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
@@ -12,6 +16,8 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'io.fabric.tools:gradle:1.31.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.60"
     }
 }
 
@@ -19,7 +25,10 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
+        maven { url 'https://jitpack.io' }
     }
 }
 
