--- a/Android/FirebaseApp/app/build.gradle
+++ b/Android/FirebaseApp/app/build.gradle
@@ -1,4 +1,8 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -27,10 +31,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.60"
 
     // Imagens
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.github.jkwiecien:EasyImage:3.0.3'
 
     //TODO:  Add dependencias para Firebase, Google Facebook
     // Firebase Analytics
@@ -48,6 +54,12 @@ dependencies {
 
     // Google login
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
+
+    // Firebase Message
+    implementation 'com.google.firebase:firebase-messaging:20.0.1'
+
+    // Firebase Storage
+    implementation 'com.google.firebase:firebase-storage:19.1.0'
 
     // ViewModel and LiveData
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
@@ -75,3 +87,4 @@ dependencies {
 apply plugin: 'com.google.gms.google-services'
 
 //TODO: aplicar plugin play services
+
