--- a/Android/FirebaseApp/build.gradle
+++ b/Android/FirebaseApp/build.gradle
@@ -4,14 +4,14 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
 
         //TODO: Add Play Services
         classpath 'com.google.gms:google-services:4.3.2'
-
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.60"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -22,7 +22,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url 'https://jitpack.io' }
     }
 }
 
