--- a/Android/FirebaseApp/app/build.gradle
+++ b/Android/FirebaseApp/app/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     // Facebook SDK
     implementation 'com.facebook.android:facebook-android-sdk:5.9.0'
 
+    // Cloud Messaging
+    implementation 'com.google.firebase:firebase-messaging:20.1.5'
+
     // ViewModel and LiveData
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.1.0'
