--- a/Android/FirebaseApp/app/build.gradle
+++ b/Android/FirebaseApp/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     // Imagens
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.github.jkwiecien:EasyImage:2.1.1'
 
     // Firebase Analytics
     implementation 'com.google.firebase:firebase-core:17.2.1'
